# OpenTEWS-Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  backfill_predictions.py  config.py  docker-compose.yml  infer_local.py  main.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py  redis.py
app/models/: __init__.py  earthquake.py  enums.py  observation_point.py  prediction.py
app/routers/: __init__.py  earthquakes.py  observation_points.py  scraper.py  ws.py
app/schemas/: __init__.py  earthquake.py  observation_point.py  prediction.py  scraper.py
app/services/: __init__.py  bmkg_scraper_service.py  earthquake_service.py  observation_point_service.py  prediction_service.py  scraper_cron.py  websocket_manager.py
migrations/: README.md  alembic.ini  env.py
migrations/versions/: 20260425_0001_initial_schema.py  20260427_0002_move_observation_point_to_earthquakes.py
models/: __init__.py  fno.py  pino.py  swe_residuals.py
nginx/: Dockerfile  nginx.conf
scripts/: dump_data.py  seed_data.py
tests/: conftest.py  test_api_earthquakes.py  test_api_observation_points.py  test_api_scraper.py  test_bmkg_scraper_features.py  test_main_lifespan.py  test_scraper_deduplication.py
